--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         CPANPLUS-Dist-Deb
-version:      0.05
+version:      0.06
 version_from: lib/CPANPLUS/Dist/Deb.pm
 installdirs:  site
 requires:
@@ -18,4 +18,4 @@ requires:
     YAML:                          0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+generated_by: ExtUtils::MakeMaker version 6.30
