--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,13 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         CPANPLUS-Dist-Deb
-version:      0.10
-version_from: lib/CPANPLUS/Dist/Deb.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                CPANPLUS-Dist-Deb
+version:             0.12
+abstract:            CPANPLUS plugin to create debian packages on the fly
+license:             ~
+author:              
+    - Jos Boumans <kane[at]cpan.org>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     CPANPLUS:                      0.81
     CPANPLUS::Dist::Build:         0.03
     IPC::Cmd:                      0.23
@@ -16,6 +19,6 @@ requires:
     Params::Check:                 0.23
     Test::More:                    0
     YAML:                          0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
